--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "fcc-coding-interview-prep",
   "version": "1.0.0",
-  "description": "JS coding interview preparation exercises from FreeCodeCamp",
+  "description": "Different exercises to solve, including Leetcode, Codewars, FreeCodeCamp, Google, etc.",
   "main": "src/index.js",
   "scripts": {
     "test": "jest",
     "start": "node src/index.js",
-    "lint": "eslint src"
+    "lint": "eslint src --fix"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,9 @@
     "code-prep",
     "FreeCodeCamp",
     "interview",
-    "exercises"
+    "exercises",
+    "leetcode",
+    "codewars"
   ],
   "author": "Yurii Pakhota",
   "license": "MIT",
